NW-37: Persist bank accounts to the database (#7)