@@ -2,27 +2,27 @@ package com.flybird.nestwise.services.banking;
 
 import com.flybird.nestwise.clients.banks.monobank.MonobankClient;
 import com.flybird.nestwise.clients.banks.monobank.dto.ClientInfoResponse;
-import com.flybird.nestwise.dto.banking.AccountBalance;
+import com.flybird.nestwise.domain.Account;
+import com.flybird.nestwise.domain.Bank;
 import com.flybird.nestwise.dto.banking.AuthType;
 import com.flybird.nestwise.dto.banking.BankTransactionDto;
 import com.flybird.nestwise.dto.banking.ExchangeRateDto;
 import com.flybird.nestwise.dto.banking.LoginRequestDto;
 import com.flybird.nestwise.dto.banking.LoginStatusResponseDto;
+import com.flybird.nestwise.repositories.BankRepository;
+import com.flybird.nestwise.repositories.UserRepository;
 import com.flybird.nestwise.services.SessionService;
-import com.flybird.nestwise.utils.CurrencyConversionUtil;
 import com.flybird.nestwise.utils.MappingUtil;
-import lombok.AllArgsConstructor;
+import jakarta.annotation.PostConstruct;
+import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.stereotype.Service;
 
-import java.math.BigDecimal;
-import java.math.RoundingMode;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static com.flybird.nestwise.dto.banking.AuthType.TOKEN;
 import static com.flybird.nestwise.utils.MappingUtil.CURRENCY_MAPPING;
@@ -30,13 +30,21 @@ import static java.util.Objects.isNull;
 import static java.util.stream.Collectors.toMap;
 
 @Service("monobank")
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class MonobankServiceImpl implements BankService {
     private static final List<AuthType> BANK_LOGIN_TYPES = List.of(TOKEN);
 
     private final SessionService sessionService;
     private final MonobankClient monobankClient;
+    private final UserRepository userRepository;
+    private final BankRepository bankRepository;
     private final MappingUtil mappingUtil;
+    private Bank bank;
+
+    @PostConstruct
+    private void init() {
+        bank = bankRepository.findByCode("monobank").orElseThrow(RuntimeException::new);
+    }
 
     @Override
     public LoginStatusResponseDto bankLogin(String bankId, AuthType type, LoginRequestDto requestDto) {
@@ -75,29 +83,20 @@ public class MonobankServiceImpl implements BankService {
     }
 
     @Override
-    public List<AccountBalance> getAccounts(String currency) {
+    public List<Account> getAccounts(Long userId) {
         var authToken = sessionService.getAuthToken("monobank");
-        var exchangeRates = getExchangeRates();
 
         return monobankClient.getClientInfo(authToken).getAccounts().stream()
-                .map(account -> AccountBalance.builder()
-                        .accountId(account.getId())
-                        .balance(toCurrency(currency, account, exchangeRates))
-                        .build())
-                .collect(Collectors.toList());
+                .map(account -> mappingUtil.toDomain(account,
+                        bank.getId(), bankRepository::getReferenceById,
+                        userId, userRepository::getReferenceById))
+                .toList();
     }
 
     private List<BankTransactionDto> getAccountTransactions(String accountId, long from, long to, String authToken) {
         return monobankClient.getAccountStatement(accountId, from, to, authToken).stream()
                 .map(mappingUtil::toDto)
                 .toList();
-    }
-
-    private static BigDecimal toCurrency(String currency, ClientInfoResponse.Account account, Map<Pair<Integer, Integer>, ExchangeRateDto> exchangeRates) {
-        Function<ClientInfoResponse.Account, BigDecimal> balanceFunc = (account1) -> BigDecimal.valueOf(account1.getBalance() - account1.getCreditLimit()).divide(BigDecimal.valueOf(100), 2, RoundingMode.HALF_UP);
-        Function<ClientInfoResponse.Account, Integer> currencyCodeFunc = ClientInfoResponse.Account::getCurrencyCode;
-
-        return CurrencyConversionUtil.toCurrency(currency, account, balanceFunc, currencyCodeFunc, exchangeRates);
     }
 
     private LoginStatusResponseDto loginWithToken(String bankId) {
